# Ordswap_bitfriendly

./: dock  file-docker-2  traefik.toml  working.py
services/: docker-compose.yml
services/bitfriendly/app/: .env  .gitignore  Dockerfile  bitfriendly_app.db  core  ordinal_btc.py  pyproject.toml  pysqlite3-0.5.2-cp310-cp310-linux_x86_64.whl
services/bitfriendly/app/app/: db.py  main.py
services/bitfriendly/app/app/core/: config.py  crud.py  schemas.py  security.py
services/bitfriendly/app/user/: hd_keys.py  models.py  utils.py
services/frontend/app/: .d.ts  Dockerfile  README.md  babel.config.js  bitcoinjs-lib.js  externalScript.js  package-lock.json  package.json  vite.config.js  webpack.config.js
services/frontend/app/public/: index.html
services/frontend/app/src/: App.vue  main.js
services/frontend/app/src/components/: BTCard.vue  Content.vue  Dashboard.vue  Footer.vue  Footerbtc.vue  Header.vue  JobCard.vue  Login-md.vue  NFTCard.vue  PriceTrackerWidget.vue  Refs.vue  SendCryptoFormbtc.vue  SpendingStatusWidget.vue  TransactionList.vue  index-collection.css  index-import.css  index-inscribe.css  top-header.vue  top-md.vue
services/frontend/app/src/plugins/: CreateWallet.js  bootstrap-vue.js  vue.config.js
services/frontend/app/src/router/: index.js
services/frontend/app/src/store/: index.js  index232.js
services/frontend/app/src/views/: About.vue  Collection-mint.vue  CreateWallet.vue  Inscribe.vue  Login.vue  PageNotFound.vue  SendCryptoForm.vue  Wallet.vue
